--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ after_success:
   # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("DischargeData")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("PACKAGE_NAME")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'cd(Pkg.dir("DischargeData")); include(joinpath("docs", "make.jl"))'
