--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"DischargeData\"); Pkg.build(\"DischargeData\")"
+      Pkg.clone(pwd(), \"TidalFluxQuantities\"); Pkg.build(\"TidalFluxQuantities\")"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"DischargeData\")"
+  - C:\projects\julia\bin\julia -e "Pkg.test(\"TidalFluxQuantities\")"
