--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ notifications:
 # uncomment the following lines to override the default test script
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("DischargeData"); Pkg.test("DischargeData"; coverage=true)'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("TidalFluxQuantities"); Pkg.test("TidalFluxQuantities"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("DischargeData")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'cd(Pkg.dir("TidalFluxQuantities")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("DischargeData")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'cd(Pkg.dir("TidalFluxQuantities")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   - julia -e 'Pkg.add("Documenter")'
-  - julia -e 'cd(Pkg.dir("DischargeData")); include(joinpath("docs", "make.jl"))'
+  - julia -e 'cd(Pkg.dir("TidalFluxQuantities")); include(joinpath("docs", "make.jl"))'
